fix embed youtube width overflow in mobile and add max height to edit form in admin

--- a/apps/vegsochk_web/assets/css/app.scss
+++ b/apps/vegsochk_web/assets/css/app.scss
@@ -72,3 +72,7 @@ html, body {
   position:relative;
   overflow-x:hidden;
 }
+
+iframe {
+  max-width: 100%;
+}
