--- a/apps/vegsochk_web/assets/js/pages/authors/articles/form.scss
+++ b/apps/vegsochk_web/assets/js/pages/authors/articles/form.scss
@@ -1,3 +1,3 @@
-.rc {
-  background: red;
+.articleFormContainer {
+  height: 800px;
 }
